chore: fix EOF newline in PR template (pre-commit)
